# croniot-iot

./: .gitignore  CMakeLists.txt  README.md  custompart.csv  partitions.csv  platformio.ini  sdkconfig
components/croniot/: CMakeLists.txt
components/croniot/src/: AuthenticationController.cpp  AuthenticationController.h  CJsonPtr.h  CMakeLists.txt  CommonSetup.cpp  CommonSetup.h  CroniotConfig.h  CurrentDateTimeController.cpp  CurrentDateTimeController.h  DateTime.h  Result.cpp  Result.h  Storage.cpp  Storage.h  StringUtil.cpp  StringUtil.h  UserCredentials.h
components/croniot/src/Messages/: MessageLoginRequest.cpp  MessageLoginRequest.h  MessageRegisterDevice.cpp  MessageRegisterDevice.h  MessageRegisterSensorType.cpp  MessageRegisterSensorType.h  MessageRegisterTaskType.cpp  MessageRegisterTaskType.h  MessageSensorData.cpp  MessageSensorData.h  MessageState.cpp  MessageState.h
components/croniot/src/Parameters/: Parameter.cpp  Parameter.h  ParameterInteger.cpp  ParameterInteger.h  ParameterTime.cpp  ParameterTime.h  StatefulParameterSlider.cpp  StatefulParameterSlider.h  StatefulParameterSwitch.cpp  StatefulParameterSwitch.h
components/croniot/src/Sensors/: Sensor.h  SensorType.cpp  SensorType.h  SensorsController.cpp  SensorsController.h
components/croniot/src/Tasks/: MessageTask.h  SimpleTaskData.h  TaskBase.cpp  TaskBase.h  TaskController.cpp  TaskController.h  TaskData.h  TaskProgressUpdate.cpp  TaskProgressUpdate.h  TaskType.cpp  TaskType.h
components/croniot/src/comm/: BleChannel.cpp  BleChannel.h  CommChannel.h  MessageBus.cpp  MessageBus.h  RemoteChannel.cpp  RemoteChannel.h
components/croniot/src/network/: CMakeLists.txt  ConnectionTypes.h  NetworkManager.cpp  NetworkManager.h
components/croniot/src/network/connection_provider/: NetworkConnectionController.h  NetworkConnectionControllerBase.h  NetworkConnectionProvider.cpp  NetworkConnectionProvider.h  Sim7600NetworkConnectionController.cpp  Sim7600NetworkConnectionController.h  WifiNetworkConnectionController.cpp  WifiNetworkConnectionController.h
components/croniot/src/network/http/: HttpController.h  HttpControllerBase.h  HttpProvider.h  Sim7600HttpController.cpp  Sim7600HttpController.h  WifiHttpController.cpp  WifiHttpController.h
components/croniot/src/network/mqtt/: MqttController.h  MqttProvider.cpp  Sim7600MqttController.cpp  Sim7600MqttController.h  WifiMqttController.cpp  WifiMqttController.h
components/croniot/src/network/sim7600/: Sim7600.cpp  Sim7600.h
main/: CMakeLists.txt  idf_component.yml  main.cpp
src/: AuthenticationController.cpp  AuthenticationController.h  CommonConstants.h  CommonSetup.cpp  CommonSetup.h  CurrentDateTimeController.cpp  CurrentDateTimeController.h  DateTime.h  Global.cpp  Global.h  HttpController.cpp  HttpController.h  MQTTManager.cpp  MQTTManager.h  NetworkManager.cpp  NetworkManager.h  Result.cpp  Result.h  Storage.cpp  Storage.h  StringUtil.cpp  StringUtil.h  UserCredentials.h  main.cpp
src/Messages/: MessageLogin.cpp  MessageLogin.h  MessageLoginRequest.cpp  MessageLoginRequest.h  MessageRegisterDevice.cpp  MessageRegisterDevice.h  MessageRegisterSensorType.cpp  MessageRegisterSensorType.h  MessageRegisterTaskType.cpp  MessageRegisterTaskType.h  MessageSensorData.cpp  MessageSensorData.h  MessageState.cpp  MessageState.h
src/Parameters/: Parameter.cpp  Parameter.h  ParameterInteger.cpp  ParameterInteger.h  ParameterTime.cpp  ParameterTime.h  StatefulParameterSwitch.h
src/Sensors/: Sensor.h  SensorType.cpp  SensorType.h  SensorsController.cpp  SensorsController.h
src/Tasks/: MessageTask.h  Parameter.h  SimpleTaskData.h  TaskBase.cpp  TaskBase.h  TaskController.cpp  TaskController.h  TaskData.h  TaskProgressUpdate.cpp  TaskProgressUpdate.h  TaskType.cpp  TaskType.h
src/network/: NetworkManager.cpp  NetworkManager.h
(+27 files in other folders)
